--- a/views/home.html
+++ b/views/home.html
@@ -1,60 +1,34 @@
-<nav class="navbar navbar-dark bg-blue">
-    <a class="navbar-brand" href="#">UNS - Universal Network Sketcher</a>
-    <span class="navbar-text version">
-        v.1.1.0
-    </span>
-</nav>
-<div class="container-fluid no-spacing">
-    <div class="row" style="height: 100vh">
-        <div class="bg-light menu" ng-class="{'col-3' : showMenu}" ng-show="showMenu">
-            <ul class="nav nav-pills nav-justified mb-3 " id="pills-tab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="files-tab" data-toggle="pill" href="#files" role="tab"
-                       aria-controls="files" aria-selected="true">Files</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="outline-tab" data-toggle="pill" href="#outline" role="tab"
-                       aria-controls="outline" aria-selected="false">Outline</a>
-                </li>
+<header>
+    <nav class="top-nav indigo darken-3">
+        <div class="container">
+            <div class="nav-wrapper">
+                <a href="#" data-activates="nav-mobile" class="button-collapse top-nav full hide-on-large-only">
+                    <i class="material-icons icon-white">menu</i>
+                </a>
+                <a class="page-title">UNS - Universal Network Sketcher</a>
+            </div>
+        </div>
+    </nav>
+    <ul id="nav-mobile" class="side-nav fixed grey lighten-4" style="transform: translateX(-100%);">
+        SideMenu
+    </ul>
+</header>
+<main>
+    <div class="row">
+        <div class="col s12 menu grey lighten-4">
+            <ul>
+                <li><a href=""><i class="icon-new-file small"></i></a></li>
+                <li><a href=""><i class="icon-save small"></i></a></li>
+                <li><a href=""><i class="icon-export small"></i></a></li>
+                <li><a href=""><i class="icon-printer small"></i></a></li>
+                <li><a href="" class="separator"></a></li>
+                <li><a href=""><i class="icon-server small"></i></a></li>
+                <li><a href=""><i class="icon-edge small"></i></a></li>
+                <li><a href=""><i class="icon-run small"></i></a></li>
+                <li><a href=""><i class="icon-settings small"></i></a></li>
+                <li><a href="" class="separator"></a></li>
             </ul>
-            <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="files" role="tabpanel" aria-labelledby="files-tab">
-                    <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action" ng-repeat="file in files">
-                            {{ file.name }}
-                        </a>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="outline" role="tabpanel" aria-labelledby="outline-tab">
-                    <table class="table table-bordered table-responsive">
-                        <thead>
-                        <tr>
-                            <th>Property</th>
-                            <th>Provider</th>
-                            <th>Value</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr ng-repeat="(key, value) in properties">
-                            <td>{{ key }}</td>
-                            <td class="text-center">System</td>
-                            <td class="text-right">{{ value }}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
         </div>
-        <div ng-class="showMenu ? 'col-9' : 'col-12'">
-            <div class="row">
-                <div class="col-12 bg-light action-bar">
-                    <button type="button" class="btn btn-secondary" ng-click="showMenu = !showMenu">{{ showMenu ? '<' :
-                        '>' }}
-                    </button>
-                    <button type="button" class="btn btn-success">Success</button>
-                    <button type="button" class="btn btn-danger">Danger</button>
-                </div>
-            </div>
-        </div>
+        <div id="map" style="width: 100%; height: 500px"></div>
     </div>
-</div>
+</main>
