--- a/views/home.html
+++ b/views/home.html
@@ -9,15 +9,32 @@
             </div>
         </div>
     </nav>
-    <ul id="nav-mobile" class="side-nav fixed grey lighten-4" style="transform: translateX(-100%);">
-        SideMenu
-    </ul>
+    <div id="nav-mobile" class="side-nav fixed grey lighten-4" style="transform: translateX(-100%);">
+        <p class="file-title">Arquivos</p>
+        <ul class="collection" ng-show="files.length">
+            <li class="collection-item" ng-repeat="file in files track by $index" ng-click="renderNetwork($index)">
+                <div>
+                    <p>{{ file.name }}</p>
+                    <a class="secondary-content">
+                        <i class="material-icons icon-gray">file_download</i>
+                    </a>
+                </div>
+            </li>
+        </ul>
+        <div class="empty-files" ng-show="!files.length">Nenhum arquivo foi adicionado.</div>
+    </div>
 </header>
 <main>
     <div class="row">
         <div class="col s12 menu grey lighten-4">
             <ul>
                 <li><a href=""><i class="icon-new-file small"></i></a></li>
+                <li>
+                    <input type="file" name="file" id="file" class="btn-upload" accept=".gml" on-read-file="loadFile($content)"/>
+                    <label for="file">
+                        <i class="icon-upload small"></i>
+                    </label>
+                </li>
                 <li><a href=""><i class="icon-save small"></i></a></li>
                 <li><a href=""><i class="icon-export small"></i></a></li>
                 <li><a href=""><i class="icon-printer small"></i></a></li>
