--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
     <div id="nav-mobile" class="side-nav fixed grey lighten-4" style="transform: translateX(-100%);">
         <p class="file-title">Arquivos</p>
         <ul class="collection" ng-show="files.length">
-            <li class="collection-item" ng-repeat="file in files track by $index" ng-click="renderNetwork($index)">
+            <li class="collection-item" ng-repeat="file in files track by $index" ng-click="openFile($index)">
                 <div>
                     <p>{{ file.name }}</p>
                     <a class="secondary-content">
@@ -25,7 +25,7 @@
     </div>
 </header>
 <main>
-    <div class="row">
+    <div class="row" style="margin-bottom: 0">
         <div class="col s12 menu grey lighten-4">
             <ul>
                 <li><a href=""><i class="icon-new-file small"></i></a></li>
@@ -39,13 +39,21 @@
                 <li><a href=""><i class="icon-export small"></i></a></li>
                 <li><a href=""><i class="icon-printer small"></i></a></li>
                 <li><a href="" class="separator"></a></li>
-                <li><a href=""><i class="icon-server small"></i></a></li>
-                <li><a href=""><i class="icon-edge small"></i></a></li>
-                <li><a href=""><i class="icon-run small"></i></a></li>
+                <li><a href=""><i class="icon-server small" ng-class="{'active' : options.node}" ng-click="turnFeature('node')"></i></a></li>
+                <li><a href=""><i class="icon-edge small" ng-class="{'active' : options.edge}" ng-click="turnFeature('edge')"></i></a></li>
+                <li><a href=""><i class="icon-run small" ng-class="{'active' : options.running}" ng-click="turnFeature('running')"></i></a></li>
                 <li><a href=""><i class="icon-settings small"></i></a></li>
                 <li><a href="" class="separator"></a></li>
             </ul>
         </div>
-        <div id="map" style="width: 100%; height: 500px"></div>
+    </div>
+    <div class="row">
+        <div class="col s12 map-view">
+            <div class="chip" ng-repeat="openedFile in openedFiles">
+                {{ openedFile.name }}
+                <i class="close material-icons" ng-click="closeFile($index)">close</i>
+            </div>
+        </div>
+        <div class="map" id="map" style="width: 100%; height: 500px"></div>
     </div>
 </main>
