--- a/views/home.html
+++ b/views/home.html
@@ -59,6 +59,6 @@
                 <i class="close material-icons" ng-click="closeFile($index)">close</i>
             </div>
         </div>
-        <div id="map" style="width: 100%; height: 500px"></div>
+        <map></map>
     </div>
 </main>
