--- a/views/home.html
+++ b/views/home.html
@@ -26,7 +26,7 @@
     </div>
 </header>
 <main>
-    <div class="row" style="margin-bottom: 0">
+    <div class="row" style="margin-bottom: 0;">
         <div class="col s12 menu grey lighten-4">
             <ul>
                 <li><a href=""><i class="icon-new-file small"></i></a></li>
@@ -52,7 +52,7 @@
             </ul>
         </div>
     </div>
-    <div class="row" style="margin-bottom: 0">
+    <div class="row" style="margin-bottom: 0; height: 100%">
         <div class="col s12">
             <div class="chip" ng-class="{'active': $index === currentIndex }" ng-repeat="openedFile in openedFiles"
                  ng-click="selectFile($index)">
