Add Marker and Paths to Export Map

--- a/views/home.html
+++ b/views/home.html
@@ -41,7 +41,7 @@
                 </li>
                 <!--<li class="option"><i class="icon-save small"></i>
                 </li>-->
-                <li class="option">
+                <li class="option" ng-click="exportMap()">
                     <i class="icon-export small"></i>
                 </li>
                 <li class="option">
