--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -9,6 +9,14 @@
     margin-bottom: 10px;
 }
 
+.p-l-0 {
+    padding-left: 0 !important;
+}
+
+.p-l-5 {
+    padding-left: 5px !important;
+}
+
 .text-center {
     text-align: center;
 }
@@ -34,6 +42,25 @@ main {
     width: 100%;
     height: 100%;
     overflow: hidden;
+}
+
+#toast-container {
+    top: auto !important;
+    right: auto !important;
+    bottom: 70%;
+    left: 50%;
+}
+
+.toast-success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
+
+.toast-danger {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
 }
 
 .cpointer {
@@ -121,9 +148,10 @@ i.icon-24 {
     background-color: #EBEBEB;
 }
 
-.collection-item.active {
+.collection-item.active,
+.collection-item.active .setting-url {
     background-color: #283593 !important;
-    color: white;
+    color: white !important;
     font-weight: bold;
 }
 
@@ -297,4 +325,13 @@ i.icon-24 {
     display: block;
     color: #AAAAAA;
     font-size: 12px;
+}
+
+.result-table{
+    table-layout: fixed;
+    word-wrap: break-word;
+}
+
+.result-table .property {
+    font-weight: bold;
 }
