--- a/views/modal-run.html
+++ b/views/modal-run.html
@@ -17,8 +17,8 @@
         </div>
     </div>
     <div class="row" ng-show="!result && !isRunning">
-        <div class="col s12">
-            <div class="col s12 m-b-10 p-l-0 left-align" ng-show="settings.length">
+        <div class="col s12" ng-show="settings.length">
+            <div class="col s12 m-b-10 p-l-0 left-align">
                 <p class="modal-title">Escolha a configuração:</p>
             </div>
             <ul class="collection" ng-show="settings.length">
@@ -30,6 +30,9 @@
                     </div>
                 </li>
             </ul>
+        </div>
+        <div class="col s12" ng-show="!settings.length">
+            <div class="empty-files">Não há configurações para serem executadas.</div>
         </div>
     </div>
     <div class="row" ng-show="isFinished">
@@ -45,16 +48,15 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="(key, value) in result">
-                    <td class="property">{{ key }}</td>
-                    <td>{{ value }}</td>
-                </tr>
+                    <tr ng-repeat="(key, value) in result">
+                        <td class="property">{{ key }}</td>
+                        <td>{{ value }}</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
     </div>
 </div>
-<hr style="border-top: 1px solid #d1d1d1">
 <div class="modal-footer" ng-show="!isRunning">
     <button type="button" class="waves-effect waves-light btn btn-primary" ng-click="run()" ng-show="currentIndex !== -1 && !isFinished">
         Executar
