Add Field to enter Parameters Endpoint

--- a/views/modal-settings.html
+++ b/views/modal-settings.html
@@ -13,7 +13,11 @@
                 </div>
                 <div class="input-field col s12">
                     <input id="url" type="text" class="validate" ng-model="url">
-                    <label for="url">Endpoint</label>
+                    <label for="url">Endpoint de Simulação</label>
+                </div>
+                <div class="input-field col s12">
+                    <input id="parametersUrl" type="text" class="validate" ng-model="parametersUrl">
+                    <label for="parametersUrl">Endpoint de Parâmetros</label>
                 </div>
             </div>
         </form>
