Print map on PDF

--- a/views/home.html
+++ b/views/home.html
@@ -44,7 +44,7 @@
                 <li class="option" ng-click="exportMap()">
                     <i class="icon-export small"></i>
                 </li>
-                <li class="option">
+                <li class="option" ng-click="printPDF()">
                     <i class="icon-printer small"></i>
                 </li>
                 <li>
